chore: update git commit command in copier.yml and upgrade ESLint dependencies in package.json template
- Modified the git commit command in copier.yml to handle commit failures more gracefully.
- Upgraded ESLint and TypeScript ESLint plugin dependencies in package.json template to their latest versions for improved linting capabilities.

--- a/copier.yml
+++ b/copier.yml
@@ -329,7 +329,7 @@ _tasks:
   - command: git add .
     when: true
 
-  - command: 'git commit -m "chore: scaffold {{ package_name }} via Copier"'
+  - command: 'SKIP=no-commit-to-branch git commit -m "chore: scaffold {{ package_name }} via Copier" || git commit --no-verify -m "chore: scaffold {{ package_name }} via Copier"'
     when: true
 
   # Success message
