feat: add system prerequisites check
- Add scripts/check-system.sh to validate required tools
  - Checks Node.js >= v20.0.0
  - Checks npm >= v9.0.0
  - Checks Git (any version)
  - Checks Docker (optional)
  - Checks docker compose (optional)
  - Checks Python 3 (optional)

- Script features:
  - Color-coded output (green ✔, red ✘, yellow ⚠)
  - Version comparison for Node.js and npm
  - Handles both 'docker compose' and 'docker-compose'
  - Provides installation instructions for missing tools
  - Always exits 0 (never blocks generation)
  - Works on Linux, macOS, and Windows (Git Bash/WSL)

- Update copier.yml to run check after git init, before npm install

System check runs early in project generation to alert users about
missing dependencies before attempting npm install or git hooks setup.

--- a/copier.yml
+++ b/copier.yml
@@ -291,6 +291,10 @@ _tasks:
   - command: '[ ! -d .git ] && git init -q || true'
     when: true
 
+  # System prerequisites check
+  - command: bash scripts/check-system.sh
+    when: true
+
   # Install dependencies
   - command: npm install
 
